src/internal/codegen/snapshots/hebi__internal__codegen__tests__conditional_exprs_precedence.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
fn test0(a, b, c, d):
  (a && b) || (c && d)
fn test1(a, b, c, d):
  a && b || c && d
fn test3(a, b, c, d):
  (a || (b && c)) || d
fn test4(a, b, c, d):
  a || b && c || d


# Func:
function `test0` (registers: 7, length: 40, constants: 6)
.code
  0  | load r1
  2  | store r6
  4  | load r6
  6  | jump_if_false 6
  8  | load r2
  10 | jump 4
  12 | load r6
  14 | store r5
  16 | load r5
  18 | jump_if_false 6
  20 | load r5
  22 | jump 16
  24 | load r3
  26 | store r5
  28 | load r5
  30 | jump_if_false 6
  32 | load r4
  34 | jump 4
  36 | load r5
  38 | load_none
  39 | return


function `test1` (registers: 7, length: 40, constants: 6)
.code
  0  | load r1
  2  | store r6
  4  | load r6
  6  | jump_if_false 6
  8  | load r2
  10 | jump 4
  12 | load r6
  14 | store r5
  16 | load r5
  18 | jump_if_false 6
  20 | load r5
  22 | jump 16
  24 | load r3
  26 | store r5
  28 | load r5
  30 | jump_if_false 6
  32 | load r4
  34 | jump 4
  36 | load r5
  38 | load_none
  39 | return


function `test3` (registers: 7, length: 40, constants: 6)
.code
  0  | load r1
  2  | store r6
  4  | load r6
  6  | jump_if_false 6
  8  | load r6
  10 | jump 16
  12 | load r2
  14 | store r6
  16 | load r6
  18 | jump_if_false 6
  20 | load r3
  22 | jump 4
  24 | load r6
  26 | store r5
  28 | load r5
  30 | jump_if_false 6
  32 | load r5
  34 | jump 4
  36 | load r4
  38 | load_none
  39 | return


function `test4` (registers: 7, length: 40, constants: 6)
.code
  0  | load r1
  2  | store r6
  4  | load r6
  6  | jump_if_false 6
  8  | load r6
  10 | jump 16
  12 | load r2
  14 | store r6
  16 | load r6
  18 | jump_if_false 6
  20 | load r3
  22 | jump 4
  24 | load r6
  26 | store r5
  28 | load r5
  30 | jump_if_false 6
  32 | load r5
  34 | jump 4
  36 | load r4
  38 | load_none
  39 | return


function `main` (registers: 1, length: 17, constants: 8)
.code
  0  | make_fn [0]; <function `test0` descriptor>
  2  | store_global [1]; test0
  4  | make_fn [2]; <function `test1` descriptor>
  6  | store_global [3]; test1
  8  | make_fn [4]; <function `test3` descriptor>
  10 | store_global [5]; test3
  12 | make_fn [6]; <function `test4` descriptor>
  14 | store_global [7]; test4
  16 | return



