src/internal/codegen/snapshots/hebi__internal__codegen__tests__for_iter_array.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
a := [0, 1, 2]
for v in a:
  print v


# Func:
function `main` (registers: 4, length: 48, constants: 5)
.code
  0  | load_smi 0
  2  | store r1
  4  | load_smi 1
  6  | store r2
  8  | load_smi 2
  10 | store r3
  12 | make_list r1, 3
  15 | store_global [0]; a
  17 | load_global [0]; a
  19 | load_field [1]; iter
  21 | call0
  22 | store r1
  24 | load_none
  25 | store r2
  27 | load r1
  29 | load_field [3]; done
  31 | call0
  32 | not
  33 | jump_if_false 14
  35 | load r1
  37 | load_field [2]; next
  39 | call0
  40 | store r2
  42 | load r2
  44 | print
  45 | jump_loop 18
  47 | return



