src/internal/codegen/snapshots/hebi__internal__codegen__tests__for_range_0_to_10_print.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
for i in 0..10:
  print i


# Func:
function `main` (registers: 3, length: 30, constants: 2)
.code
  0  | load_smi 0
  2  | store r1
  4  | load_smi 10
  6  | store r2
  8  | load r2
  10 | cmp_lt r1
  12 | jump_if_false 17
  14 | jump 10
  16 | load_smi 1
  18 | add r1
  20 | store r1
  22 | jump_loop 14
  24 | load r1
  26 | print
  27 | jump_loop 11
  29 | return



