src/internal/codegen/snapshots/hebi__internal__codegen__tests__function_with_param.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
fn test(a):
  print a

test(0)


# Func:
function `test` (registers: 2, length: 5, constants: 0)
.code
  0 | load r1
  2 | print
  3 | load_none
  4 | return


function `main` (registers: 3, length: 16, constants: 2)
.code
  0  | make_fn [0]; <function `test` descriptor>
  2  | store_global [1]; test
  4  | load_global [1]; test
  6  | store r1
  8  | load_smi 0
  10 | store r2
  12 | call r1, 1
  15 | return



