src/internal/codegen/snapshots/hebi__internal__codegen__tests__generator_with_default_param.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
fn test(a, b=10):
  yield a
  return b

test()


# Func:
function `test` (registers: 3, length: 17, constants: 1)
.code
  0  | load r2
  2  | is_none
  3  | jump_if_false 6
  5  | load_smi 10
  7  | store r2
  9  | load r1
  11 | yield
  12 | load r2
  14 | return
  15 | load_none
  16 | return


function `main` (registers: 1, length: 8, constants: 2)
.code
  0 | make_fn [0]; <function `test` descriptor>
  2 | store_global [1]; test
  4 | load_global [1]; test
  6 | call0
  7 | return



